[tool.poetry]
name = "repl_nix_ChatGPT-FAQ-Service-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
Flask = "^2.3.2"
line-bot-sdk = "^2.4.2"
numpy = "^1.24.3"
openai = "^0.27.7"
pandas = "2.0.0"
hyperdb-python = "0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
